--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!doctype html>
 <head>
 <title>Nutrition Counter</title>
-
+<meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="style.css" />
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script type="text/javascript" src="app.js"></script>
+
+
+
 
 </head>
 <body>
@@ -48,7 +52,7 @@
 	<div id="reportView">
 		<p>Today Report</p>
 		<div class="report">
-			<p>
+			<div>Белков: <span id="reportProt">44</span></div>
 		</div>
 
 	</div>
